objects/Topic__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Comment_Response__c</fullName>
        <label>Agency Topic Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comment_Summary__c</fullName>
        <label>Comment Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comment_Summary_status__c</fullName>
        <label>Comment Summary Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Pick__c</fullName>
        <description>Docket Comment Application.</description>
        <label>Record Type Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Docket_Record_Type_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_of_Comments_on_this_Topic__c</fullName>
        <label>Summary of Comments on this Topic</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <label>Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Number__c</fullName>
        <label>Topic Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Response_Status__c</fullName>
        <label>Topic Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Topics of discussion, conversation, documents, comments, etc., useful for tracking, reporting, categorization, other organization, or other use of the material.  Initially used to categorize snippets of text extracted from submissions of comments on dockets.</description>
    <label>Topic</label>
    <nameField>
        <label>Topic Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Topic_Name__c</columns>
        <columns>Summary_of_Comments_on_this_Topic__c</columns>
        <columns>Agency_Comment_Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Bristol_Bay</fullName>
        <columns>NAME</columns>
        <columns>Topic_Name__c</columns>
        <columns>Summary_of_Comments_on_this_Topic__c</columns>
        <columns>Topic_Response_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Topic__c.Bristol_Bay</value>
        </filters>
        <label>All Bristol Bay</label>
    </listViews>
    <listViews>
        <fullName>WOTUS_Step_2</fullName>
        <columns>NAME</columns>
        <columns>Topic_Name__c</columns>
        <columns>Topic_Response_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Topic__c.Waters_of_the_US_Step_2</value>
        </filters>
        <label>WOTUS - Step 2</label>
    </listViews>
    <listViews>
        <fullName>WQC_Topics1</fullName>
        <columns>NAME</columns>
        <columns>Topic_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Topic__c.Water_Quality_Certification</value>
        </filters>
        <label>WQC Topics</label>
    </listViews>
    <listViews>
        <fullName>Water_Quality_Certification</fullName>
        <columns>NAME</columns>
        <columns>Topic_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Topic__c.Water_Quality_Certification</value>
        </filters>
        <label>Water Quality Certification</label>
    </listViews>
    <recordTypes>
        <fullName>Bristol_Bay</fullName>
        <active>true</active>
        <label>Bristol Bay</label>
    </recordTypes>
    <recordTypes>
        <fullName>California_Selenium</fullName>
        <active>true</active>
        <label>California Selenium</label>
    </recordTypes>
    <recordTypes>
        <fullName>Missouri_NNC_Docket</fullName>
        <active>true</active>
        <label>Missouri NNC Docket</label>
    </recordTypes>
    <recordTypes>
        <fullName>WOTUS_Recommendations</fullName>
        <active>true</active>
        <label>WOTUS Recommendations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Water_Quality_Certification</fullName>
        <active>true</active>
        <label>Water Quality Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US</fullName>
        <active>true</active>
        <label>Waters of the US</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US_Step_0</fullName>
        <active>true</active>
        <label>Waters of the US – Step 0</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US_Step_1_SUPP</fullName>
        <active>true</active>
        <label>Waters of the US – Step 1 SUPP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US_Step_2</fullName>
        <active>true</active>
        <label>Waters of the US – Step 2</label>
    </recordTypes>
    <validationRules>
        <fullName>Super_User_Edit_Topic_Name</fullName>
        <active>true</active>
        <description>Allows a Super User to edit the Topic Name</description>
        <errorConditionFormula>ISCHANGED( Name )
&amp;&amp;
Not($Permission.Edit_Topic_Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Insufficient privileges to edit the Topic Name field</errorMessage>
    </validationRules>
</CustomObject>